trunk/Andromeda/test/test-src/com/sc2mod/andromeda/test/junit/unittests/generics/typeParamInStatic.a
class X <T,T2> {

	static T tx; //error
	
	static T foo(){//Error
		return null;
	}
	
	static void foo2(){	
		T t; //error
	}

}
